Switch to supporting Java 12. Fix losing time in Mind.
r5217
2019-12-12

## DISCUSSION
1. https://github.com/mars-sim/mars-sim/issues/200
2. https://github.com/mars-sim/mars-sim/issues/236


## NEW
1. Switch the codebase to supporting Java 12.
2. Use these two switches in eclipse launchers and
   in MarsProjectStarter and MarsProjectHeadlessStarter
   -XX:+UnlockExperimentalVMOptions
   -XX:+UseShenandoahGC

## FIX
1. Relocate calling of takeAction() in timePassing() in Mind
2. Relocate calling of mind.timePassing(time) in Person
   - Stop losing time

## CHANGE
1. Rework addTime() and ClockThreadTask's run() in
   MasterClock.
2. Tune up a lot of meta tasks and tasks.